feat: copy from element

--- a/site/package.json
+++ b/site/package.json
@@ -12,6 +12,7 @@
     "babel-loader": "^8.0.0-beta.0",
     "browser-sync": "^2.18.13",
     "browser-sync-webpack-plugin": "^1.2.0",
+    "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -30,6 +31,6 @@
     "dev": "./node_modules/.bin/webpack --watch"
   },
   "dependencies": {
-    "kopio.js": "^1.0.1"
+    "kopio.js": "^1.1.1"
   }
 }
