--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kopio.js",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "Link/text clipboard copying made easy and light",
   "main": "dist/kopio.cjs.js",
   "module": "dist/kopio.esm.js",
@@ -21,13 +21,18 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.2",
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.11.0",
-    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "rollup": "^0.51.8",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.0"
-  }
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "standard": "^10.0.3"
+  },
+  "standard": {
+    "parser": "babel-eslint"
+  },
+  "dependencies": {}
 }
